PR/48419 - Henning Petersen -- unbalanced parenthesis